--- a/composer.json
+++ b/composer.json
@@ -4,19 +4,13 @@
     "keywords": ["framework", "laravel"],
     "license": "MIT",
     "type": "project",
-    "repositories": [
-        {
-            "type": "vcs",
-            "url":  "https://github.com/nafiesl/backup-manager-laravel"
-        }
-    ],
     "require": {
-        "php": "^7.3 || ^8.0",
-        "backup-manager/laravel": "dev-php_8_support",
-        "fideloper/proxy": "^4.0",
-        "laravel/framework": "^8.0",
+        "php": "^8.1",
+        "fideloper/proxy": "^4.3",
+        "laravel/framework": "^9.0",
         "laravel/legacy-factories": "^1.0",
-        "laravel/tinker": "^2.0",
+        "laravel/sanctum": "^3.2",
+        "laravel/tinker": "^2.8",
         "laravel/ui": "^3.0",
         "luthfi/formfield": "^1.0"
     },
@@ -64,6 +58,6 @@
         "sort-packages": true,
         "optimize-autoloader": true
     },
-    "minimum-stability": "dev",
+    "minimum-stability": "stable",
     "prefer-stable": true
 }
