--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
         "laravel/ui": "^3.0",
-        "luthfi/formfield": "^1.0"
+        "luthfi/formfield": "^1.0",
+        "masbug/flysystem-google-drive-ext": "^2.2"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.1",
