--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:AU7cEXNIX3wMaznYoynXR2v2EI3nypQRGzUkeq7mROg=
 APP_DEBUG=true
 APP_LOG_LEVEL=debug
 APP_URL=http://localhost
@@ -10,14 +10,15 @@ LOG_CHANNEL=stack
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=homestead
-DB_USERNAME=homestead
-DB_PASSWORD=secret
+DB_DATABASE=lara_silsilah
+DB_USERNAME=root
+DB_PASSWORD=qazxsw12edc
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 SESSION_DRIVER=file
-QUEUE_DRIVER=sync
+QUEUE_CONNECTION=database
+QUEUE_DRIVER=database
 
 REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
@@ -41,3 +42,12 @@ LEAFLET_MAP_ZOOM_LEVEL=4
 LEAFLET_MAP_DETAIL_ZOOM_LEVEL=18
 LEAFLET_MAP_CENTER_LATITUDE="-0.87887"
 LEAFLET_MAP_CENTER_LONGITUDE="117.4863"
+
+
+FILESYSTEM_CLOUD=google
+GOOGLE_DRIVE_CLIENT_ID=749560702737-e1qun5detsg79suj5qi7sp4jn9un1rtj.apps.googleusercontent.com
+GOOGLE_DRIVE_CLIENT_SECRET=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
+GOOGLE_DRIVE_REFRESH_TOKEN=1//04P7dGz85ul6cCgYIARAAGAQSNwF-L9Ir-uUf0GFVeyzlgB-2MAFQMeeCp1VAVNn4AbmIRKZe5BAAXd96dY9ph7czJpJz-SxVmPc
+GOOGLE_DRIVE_FOLDER=App-Silsilah
+GOOGLE_DRIVE_FOLDER_ID=1FIk3armGMs2QhfPiuyVzgEoftO4bbVw_
+#GOOGLE_DRIVE_TEAM_DRIVE_ID=xxx
